[gd_scene load_steps=13 format=3 uid="uid://cdyv73wtnpr2p"]

[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="1_ivmjn"]
[ext_resource type="Texture2D" uid="uid://bwg4qqtg3583f" path="res://Assets/UI/Society.jpg" id="2_j1fqx"]
[ext_resource type="FontFile" uid="uid://cdh4f8j6uv54l" path="res://Assets/Fonts/HelpMe.ttf" id="3_fnpus"]
[ext_resource type="PackedScene" uid="uid://4efi72m083dt" path="res://Scenes/UI/SettingsMenu.tscn" id="4_ve6qf"]
[ext_resource type="Texture2D" uid="uid://cratovgllos6u" path="res://Assets/UI/Icons/Meta/MainMenuBackground.jpg" id="5_s42hw"]
[ext_resource type="AudioStream" uid="uid://cqptup67gyc6k" path="res://Assets/Audio/Music/ScaryAmbience.mp3" id="6_3qboe"]

[sub_resource type="Animation" id="Animation_7axf5"]
resource_name = "Fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o6qrd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_phybp"]
_data = {
"Fade": SubResource("Animation_7axf5"),
"RESET": SubResource("Animation_o6qrd")
}

[sub_resource type="Animation" id="Animation_a4j5a"]
resource_name = "Fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_pl86o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tfepx"]
_data = {
"Fade": SubResource("Animation_a4j5a"),
"RESET": SubResource("Animation_pl86o")
}

[node name="MainMenu" type="Node2D" groups=["MainMenu"]]
script = ExtResource("1_ivmjn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlaceholderBackground" type="TextureRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1484.0
offset_bottom = 836.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.565, 0.565)
texture = ExtResource("2_j1fqx")

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 1.00267
anchor_bottom = 1.00267
offset_right = -901.12
offset_bottom = -506.88
scale = Vector2(1.88, 1.88)
texture = ExtResource("5_s42hw")
metadata/_edit_use_anchors_ = true

[node name="ButtonManager" type="Control" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CanvasLayer/ButtonManager"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.131771
anchor_top = 0.125
anchor_right = 0.868229
anchor_bottom = 0.193519
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_fnpus")
theme_override_font_sizes/font_size = 64
text = "Eclipse Protocol: Prelude to Insanity
"
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/ButtonManager"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.326302
anchor_top = 0.277778
anchor_right = 0.673698
anchor_bottom = 0.89537
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/ButtonManager/PanelContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_fnpus")
theme_override_font_sizes/font_size = 64
text = "New Game
"

[node name="ContinueButton" type="Button" parent="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_fnpus")
theme_override_font_sizes/font_size = 64
text = "Continue"

[node name="SettingsButton" type="Button" parent="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_fnpus")
theme_override_font_sizes/font_size = 64
text = "Settings"

[node name="HelpButton" type="Button" parent="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_fnpus")
theme_override_font_sizes/font_size = 64
text = "How to Play"

[node name="QuitButton" type="Button" parent="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("3_fnpus")
theme_override_font_sizes/font_size = 64
text = "Quit
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ButtonManager"]
libraries = {
"": SubResource("AnimationLibrary_phybp")
}

[node name="OtherFadeTimer" type="Timer" parent="CanvasLayer/ButtonManager"]
wait_time = 0.5
one_shot = true

[node name="SettingsMenu" parent="CanvasLayer" instance=ExtResource("4_ve6qf")]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/ColorRect"]
libraries = {
"": SubResource("AnimationLibrary_tfepx")
}

[node name="Timer" type="Timer" parent="CanvasLayer/ColorRect"]
one_shot = true

[node name="FadeOutTimer" type="Timer" parent="CanvasLayer/ColorRect"]
wait_time = 1.25
one_shot = true

[node name="MainMenuMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_3qboe")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer/HelpButton" to="." method="_on_help_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonManager/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="CanvasLayer/ButtonManager/OtherFadeTimer" to="." method="_on_other_fade_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/ColorRect/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CanvasLayer/ColorRect/FadeOutTimer" to="." method="_on_fade_out_timer_timeout"]
